src/test/run-pass/issue-1899.rs
fn main()
{
    let _b = [bind (fn~() { })()];
}
