src/test/compile-fail/bad-module.rs
// error-pattern: unresolved name

fn main() { let foo = thing::len(~[]); }
